--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "lint": "oxlint"
   },
   "dependencies": {
-    "oxfmt": "^0.19.0",
-    "oxlint": "^1.34.0",
     "react": "^19.2.3",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "@types/react": "^19.2.7"
+    "oxfmt": "^0.24.0",
+    "oxlint": "^1.39.0",
+    "@types/react": "^19.2.7",
+    "oxlint-tsgolint": "^0.11.0"
   }
 }
