--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "lint": "oxlint"
+    "lint": "oxlint",
+    "lint:gitlab": "oxlint --format=gitlab > gitlab-report.json"
   },
   "dependencies": {
     "oxfmt": "^0.24.0",
